--- a/doc/paper_ms_method_HSCY1/citation.bib
+++ b/doc/paper_ms_method_HSCY1/citation.bib
@@ -802,3 +802,21 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{MLZ-TPZ2013,
+       author = {{Carrasco Kind}, Matias and {Brunner}, Robert J.},
+        title = "{TPZ: photometric redshift PDFs and ancillary information by using prediction trees and random forests}",
+      journal = {\mnras},
+     keywords = {methods: data analysis, methods: statistical, surveys, galaxies: distances and redshift, galaxies: statistics, Astrophysics - Cosmology and Nongalactic Astrophysics},
+         year = 2013,
+        month = jun,
+       volume = {432},
+       number = {2},
+        pages = {1483-1501},
+          doi = {10.1093/mnras/stt574},
+archivePrefix = {arXiv},
+       eprint = {1303.7269},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013MNRAS.432.1483C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
