update the draft of paper

--- a/doc/paper_ms_method_HSCY1/citation.bib
+++ b/doc/paper_ms_method_HSCY1/citation.bib
@@ -459,31 +459,22 @@ archivePrefix = "arXiv",
 }
 
 @ARTICLE{KIDS13,
-   author = {{de Jong}, J.~T.~A. and {Kuijken}, K. and {Applegate}, D. and
-	{Begeman}, K. and {Belikov}, A. and {Blake}, C. and {Bout}, J. and
-	{Boxhoorn}, D. and {Buddelmeijer}, H. and {Buddendiek}, A. and
-	{Cacciato}, M. and {Capaccioli}, M. and {Choi}, A. and {Cordes}, O. and
-	{Covone}, G. and {Dall'Ora}, M. and {Edge}, A. and {Erben}, T. and
-	{Franse}, J. and {Getman}, F. and {Grado}, A. and {Harnois-Deraps}, J. and
-	{Helmich}, E. and {Herbonnet}, R. and {Heymans}, C. and {Hildebrandt}, H. and
-	{Hoekstra}, H. and {Huang}, Z. and {Irisarri}, N. and {Joachimi}, B. and
-	{K{\"o}hlinger}, F. and {Kitching}, T. and {La Barbera}, F. and
-	{Lacerda}, P. and {McFarland}, J. and {Miller}, L. and {Nakajima}, R. and
-	{Napolitano}, N.~R. and {Paolillo}, M. and {Peacock}, J. and
-	{Pila-Diez}, B. and {Puddu}, E. and {Radovich}, M. and {Rifatto}, A. and
-	{Schneider}, P. and {Schrabback}, T. and {Sifon}, C. and {Sikkema}, G. and
-	{Simon}, P. and {Sutherland}, W. and {Tudorica}, A. and {Valentijn}, E. and
-	{van der Burg}, R. and {van Uitert}, E. and {van Waerbeke}, L. and
-	{Velander}, M. and {Kleijn}, G.~V. and {Viola}, M. and {Vriend}, W.-J.
-	},
-    title = "{The Kilo-Degree Survey}",
-  journal = {The Messenger},
-     year = 2013,
-    month = dec,
-   volume = 154,
-    pages = {44-46},
-   adsurl = {http://adsabs.harvard.edu/abs/2013Msngr.154...44D},
-  adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+       author = {{de Jong}, Jelte T.~A. and {Verdoes Kleijn}, Gijs A. and
+         {Kuijken}, Konrad H. and {Valentijn}, Edwin A.},
+        title = "{The Kilo-Degree Survey}",
+      journal = {Experimental Astronomy},
+     keywords = {Wide-field imaging, Survey system, VLT/VST, Weak gravitational lensing, Photometric redshifts, Astrophysics - Cosmology and Nongalactic Astrophysics, Astrophysics - Instrumentation and Methods for Astrophysics},
+         year = 2013,
+        month = jan,
+       volume = {35},
+       number = {1-2},
+        pages = {25-44},
+          doi = {10.1007/s10686-012-9306-1},
+archivePrefix = {arXiv},
+       eprint = {1206.1254},
+ primaryClass = {astro-ph.CO},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013ExA....35...25D},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
 @ARTICLE{DES-SV-massMap-sparsity,
